<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/OrangeButton"
        android:text="@string/button_text_spotify_streamer"
        android:onClick="buttonClicked"
        android:id="@+id/button_spotify_streamer"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/OrangeButton"
        android:text="@string/button_text_scores_app"
        android:onClick="buttonClicked"
        android:id="@+id/button_scores_app"
        android:layout_below="@+id/button_spotify_streamer" />

    <Button
        style="@style/OrangeButton"
        android:text="@string/button_text_library_app"
        android:onClick="buttonClicked"
        android:id="@+id/button_library_app"
        android:layout_below="@+id/button_scores_app" />

    <Button
        style="@style/OrangeButton"
        android:text="@string/button_text_build_it_bigger"
        android:onClick="buttonClicked"
        android:id="@+id/button_build_it_bigger"
        android:layout_below="@+id/button_library_app" />

    <Button
        style="@style/OrangeButton"
        android:text="@string/button_text_xyz_reader"
        android:onClick="buttonClicked"
        android:id="@+id/button_xyz_reader"
        android:layout_below="@+id/button_build_it_bigger" />

    <Button
        style="@style/RedButton"
        android:text="@string/button_text_capstone"
        android:onClick="buttonClicked"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz_reader" />

</RelativeLayout>
